fixed landing page css to work on smaller resolution

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
 body {
   background:linear-gradient(-90deg, red, yellow)
 }
+.App-container {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+}
 .App-message-container {
   margin-top: 5em;
-  margin-left: 44em;
+
 }
 .App-program-container {
   width: 30em;
@@ -11,5 +16,4 @@ body {
   height: 1em;
   border: 1px solid black;
   margin-top: 5em;
-  margin-left: 44em;
 }
