--- a/src/CSS/Github.css
+++ b/src/CSS/Github.css
@@ -1,4 +1,8 @@
-
+.Github {
+  display: flex;
+  flex-direction: center;
+  align-items: center;
+}
 .Github-title-container {
   margin-top: 5em;
   text-align: center;
